--- a/weekOneProject/styles.css
+++ b/weekOneProject/styles.css
@@ -1,14 +1,62 @@
+/*
+Background: #F2F1E8
+Text: #131511
+Inline Link: #968772
+Inline Link (Hover): #967343
+Navigation Background: #FFFFFF
+Navigation Text: #2B2F26
+Navigation Text (Hover): #CD5D67
+Navigation Text (Active) #968772
+Button Background: #968772
+Button Background (Hover): #967343
+Button Text: #F2F1E8
+Button Text (Hover): #FFFFFF
+Input Border Bottom: #968772
+Input Border Bottom (Focus): #967343
+*/
+
+body {
+  color: #131511;
+}
+
 header {
+  color: #2B2F26;
+  background-color: #FFFFFF;
   padding: 1.5em .5em 1.5em .5em;
   margin: 1em 1em 1em 1em;
 }
 
 nav a {
   padding-right: 80px;
+  text-transform: capitalize;
+}
+
+footer {
+  background-color: rgb(41, 48, 38);
+  color: white;
+  text-align: left;
+  padding: 3em 1em 3em 1em;
+  margin-top: .5em;
 }
 
 h1, h2, h3 {
   margin: 0;
+}
+
+section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+section img {
+  margin: .5em;
+}
+
+h3 {
+  margin: 0;
+  padding: 1em 2em 1em 1em;
+  position: absolute;
 }
 
 .heading {
@@ -16,8 +64,43 @@ h1, h2, h3 {
   padding: 2em 1em 2em 1em;
 }
 
+.photo1 {
+  height: 350px;
+  width: 720px;
+}
+
+.photo2 {
+  height: 350px;
+  width: 225px;
+}
+
+.photo3 {
+  height: 350px;
+  width: 225px;
+}
+
+.photo4 {
+  height: 230px;
+  width: 220px;
+}
+
+.photo5 {
+  height: 230px;
+  width: 220px;
+}
+
+.photo6 {
+  height: 230px;
+  width: 490px;
+}
+
+.photo7 {
+  height: 230px;
+  width: 220px;
+}
+
 #mainWrapper {
-  background-color: brown;
+  background-color: #F2F1E8;
 }
 
 #mainNav {
@@ -33,45 +116,3 @@ h1, h2, h3 {
   height: 4em;
   margin: -1.2em;
 }
-
-footer {
-  background-color: black;
-  color: white;
-  text-align: left;
-  padding: 3em 1em 3em 1em;
-}
-
-.photo1 {
-          height: 370px;
-          width: 730px;
-        }
-
-        .photo2 {
-          height: 365px;
-          width: 235px;
-        }
-
-        .photo3 {
-          height: 365px;
-          width: 235px;
-        }
-
-        .photo4 {
-          height: 235px;
-          width: 240px;
-        }
-
-        .photo5 {
-          height: 235px;
-          width: 240px;
-        }
-
-        .photo6{
-          height: 245px;
-          width: 480px;
-        }
-
-        .photo7{
-          height: 235px;
-          width: 240px;
-        }
