--- a/weekOneProject/styles.css
+++ b/weekOneProject/styles.css
@@ -52,7 +52,6 @@ h1, h2 {
 }
 
 h1, h2, h3 {
-  margin: 0;
   padding: .3em .3em .3em .3em;
 }
 
@@ -68,18 +67,17 @@ table {
 
 form {
   padding: 3em;
-
 }
 
 input {
-border-top: none;
-border-left: none;
-border-right: none;
-border-bottom: .2em solid #968772;
-width: 100%;
-margin: 1em;
-background-color: #F2F1E8;
-font-size: 1em;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: .2em solid #968772;
+  width: 100%;
+  margin: 1em;
+  background-color: #F2F1E8;
+  font-size: 1em;
 }
 
 button {
@@ -89,6 +87,24 @@ button {
   margin-top: .5em;
 }
 
+.birdhouse {
+  height: 3.5em;
+  width: 5em;
+  float: left;
+  margin-right: 1.5em;
+}
+
+.photoBreak {
+  width: 100%;
+  background: url(../weekOneProject/images/background-3.jpg) fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 1em 0;
+  text-align: center;
+  color: white;
+  font-size: 5em;
+}
+
 .submitHeading {
   padding: 2em 0 0 0;
 }
@@ -96,6 +112,7 @@ button {
 .wrapper {
   margin: auto;
   max-width: 760;
+  padding: 0 10em;
 }
 
 .heading {
@@ -113,66 +130,78 @@ button {
   align-items: center;
 }
 
-
-
 .photos1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin: auto;
 }
+
 .photos2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin: auto;
 }
+
 .photos1>img {
   margin: .5em;
 }
+
 .photos2>img {
   margin: .5em;
 }
+
 .labels {
   padding: 1em;
   background-color: blue;
   display: flex;
   justify-content: space-between;
 }
+
 .label1 {
   background-color: red;
 }
+
 .photo1 {
   height: 350px;
   width: 720px;
 }
+
 .photo2 {
   height: 350px;
   width: 225px;
 }
+
 .photo3 {
   height: 350px;
   width: 225px;
 }
+
 .photo4 {
   height: 230px;
   width: 220px;
 }
+
 .photo5 {
   height: 230px;
   width: 220px;
 }
+
 .photo6 {
   height: 230px;
   width: 490px;
 }
+
 .photo7 {
   height: 230px;
   width: 220px;
 }
+
 #mainWrapper {
   background-color: #F2F1E8;
 }
+
 #mainNav {
   display: flex;
   justify-content: center;
@@ -180,12 +209,14 @@ button {
   flex-direction: row;
   width: 100%;
 }
+
 #logo {
   position: absolute;
   height: 3.2em;
   margin: -1em;
   left: 2.5em;
 }
+
 #submitBox {
   background-color: #F2F1E8;
   width: 50em;
