--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,9 @@
-/*
-Background: #F2F1E8
-Text: #131511
-Inline Link: #968772
-Inline Link (Hover): #967343
-Navigation Background: #FFFFFF
-Navigation Text: #2B2F26
-Navigation Text (Hover): #CD5D67
-Navigation Text (Active) #968772
-Button Background: #968772
-Button Background (Hover): #967343
-Button Text: #F2F1E8
-Button Text (Hover): #FFFFFF
-Input Border Bottom: #968772
-Input Border Bottom (Focus): #967343
-*/
-
 body {
   margin: 0;
   color: #131511;
   background-color: #f2f1e8;
-  font-family: 'Merriweather', serif;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Merriweather", serif;
+  font-family: "Roboto", sans-serif;
 }
 
 header {
@@ -28,7 +11,6 @@ header {
   color: #2b2f26;
   background-color: #ffffff;
   padding: 1.5em 0.5em 1.5em 0.5em;
-  /*margin: 1em 1em 1em 1em;*/
   width: 100%;
 }
 
@@ -159,7 +141,7 @@ th {
 
 .newsletter {
   text-align: center;
-  background-image: url('../potteryPage/images/background-2.jpg');
+  background-image: url("../potteryPage/images/background-2.jpg");
   width: 100%;
   height: 40em;
   display: flex;
@@ -182,7 +164,7 @@ th {
 }
 
 .photo1 {
-  background-image: url('../potteryPage/images/product-1.jpg');
+  background-image: url("../potteryPage/images/product-1.jpg");
   height: 350px;
   width: 720px;
   display: flex;
@@ -192,7 +174,7 @@ th {
 }
 
 .photo2 {
-  background-image: url('../potteryPage/images/product-2.jpg');
+  background-image: url("../potteryPage/images/product-2.jpg");
   height: 350px;
   width: 225px;
   display: flex;
@@ -202,7 +184,7 @@ th {
 }
 
 .photo3 {
-  background-image: url('../potteryPage/images/product-3.jpg');
+  background-image: url("../potteryPage/images/product-3.jpg");
   height: 350px;
   width: 225px;
   display: flex;
@@ -212,7 +194,7 @@ th {
 }
 
 .photo4 {
-  background-image: url('../potteryPage/images/product-4.jpg');
+  background-image: url("../potteryPage/images/product-4.jpg");
   height: 230px;
   width: 220px;
   display: flex;
@@ -222,7 +204,7 @@ th {
 }
 
 .photo5 {
-  background-image: url('../potteryPage/images/product-5.jpg');
+  background-image: url("../potteryPage/images/product-5.jpg");
   height: 230px;
   width: 220px;
   display: flex;
@@ -232,7 +214,7 @@ th {
 }
 
 .photo6 {
-  background-image: url('../potteryPage/images/product-6.jpg');
+  background-image: url("../potteryPage/images/product-6.jpg");
   height: 230px;
   width: 490px;
   display: flex;
@@ -242,7 +224,7 @@ th {
 }
 
 .photo7 {
-  background-image: url('../potteryPage/images/product-7.jpg');
+  background-image: url("../potteryPage/images/product-7.jpg");
   height: 230px;
   width: 220px;
   display: flex;
